# component-cli

./: Cargo.toml
crates/component-cli/src/: main.rs
crates/component-cli/src/install/: mod.rs
crates/component-package-manager-migration/: Cargo.toml
crates/component-package-manager-migration/src/: lib.rs
crates/component-package-manager-migration/src/entities/: oci_manifest_annotation.rs  sync_meta.rs
crates/component-package-manager-migration/src/migrations/: m20260101_000001_create_oci_tables.rs  m20260101_000002_create_wit_tables.rs  m20260101_000003_create_wasm_tables.rs  m20260101_000004_create_fetch_queue.rs  triggers.rs
crates/component-package-manager/src/storage/: store.rs
crates/wasm-cli/: Cargo.toml
crates/wasm-cli/src/install/: mod.rs
crates/wasm-cli/src/self_/: mod.rs
crates/wasm-cli/tests/: test.rs
crates/wasm-package-manager/src/manager/: mod.rs
docs/: architecture.md
